--- a/songList.css
+++ b/songList.css
@@ -7,6 +7,17 @@ body {
   background-color: #DDD; /* Added background color */
 }
 
+@media (min-resolution: 2dppx) {
+  body {
+    font-size: 24px;
+  }
+  
+  .navbar {
+    justify-content: space-around; /* Spread out navbar items */
+    align-items: center;
+  }
+}
+
 .navbar {
   display: flex;
   justify-content: left;
